--- a/config/main.yaml
+++ b/config/main.yaml
@@ -14,6 +14,14 @@ tools:
     config_file: "tools/librenms.yaml"
     mappings_file: "mappings/librenms_mappings.yaml"
 
+# LLM Configuration
+llm:
+  provider: "openai"  # or "anthropic", "ollama"
+  model: "gpt-4"      # or "claude-3-opus-20240229", "llama2"
+  temperature: 0
+  # Optional: Custom API endpoint
+  # api_base: "http://localhost:11434/v1"
+
 # Global Settings
 settings:
   default_behavior:
